# NeuMoReservoir

./: .gitignore  Analysis.py  DataGenerator.py  NeuronalReservoir.py  NeuronalReservoir_RandomSpikeClassifier.py  NeuronalReservoir_classification.py  NeuronalReservoir_prediction.py  TI46Subset.py  cell_modifier.py  main.py  pyproject.toml
analysis/: CaChannels-Accuracy.ipynb  CellVisualization.ipynb  Effective-Rank-2.ipynb  Effective-Rank.ipynb  EffectiveRank-2.ipynb  MI-TE.ipynb  Position-Accuracy-2.ipynb  Position-Accuracy-Calcium.ipynb  Position-Accuracy.ipynb  Position-FiringRate.ipynb  Spike_Detection.ipynb  mean-Accuracy.ipynb  regularization.ipynb
analysis/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
cells/1672/: neuron_simulation.py
cells/1672/morphology/: dend-mpg141209_B_idA_axon-mpg141017_a1-2_idC_-_Clone_1.swc
cells/1673/: README.md
cells/1673/morphology/: dend-050921AM2_axon-mpg141017_a1-2_idC_-_Scale_x1.000_y1.050_z1.000_-_Clone_6.swc
cells/1674/morphology/: dend-oh140807_A0_idC_axon-mpg141017_a1-2_idC_-_Clone_6.swc
cells/1675/: neuron_simulation.py
cells/1675/morphology/: dend-oh140521_B0_Rat_idC_axon-mpg141017_a1-2_idC_-_Scale_x1.000_y1.150_z1.000_-_Clone_11.swc
cells/1676/morphology/: dend-mpg141217_A_idB_axon-mpg141017_a1-2_idC_-_Scale_x1.000_y1.100_z1.000_-_Clone_0.swc
cells/cell1/electrophysiology/: cell_seed3_0.hoc
cells/cell1/mechanisms/: cagk.mod  cal.mod  can.mod  cat.mod
cells/cell1/morphology/: morphology.swc
conf/: config.yaml
conf/task/: mackey-glass.yaml  random.yaml  sinwave.yaml  ti46.yaml
(+1 files in other folders)
